NEWS
________________________________________________________________________________

RSS Feed available here: @/news/news.xml

- @/news/20210414a Mailing list announcement
- @/news/20200811a Changes to repositories using symlinks to /var/db/kiss/repo
- @/news/20200511a Encryption support moved outside init
- @/news/20200509a GCC 10.1.0 kernel issue
- @/news/20200506a Firefox package changes
- @/news/20200114a Firefox binaries now available
- @/news/20200101a Firefox privacy changes moved
- @/news/20191105a The Wiki is live
- @/news/20191031a ninja replaced by samurai
- @/news/20191015b New python release (3.8.0)
- @/news/20191015a New sudo release (1.8.28)
- @/news/20191010a Mesa 19.2.1 released
- @/news/20190927a LLVM/Rust updated
- @/news/20190921a LLVM/Clang reverted to 8.0.1
- @/news/20190920a Mesa/Rust need to be rebuilt
- @/news/20190911a Please update the package manager
- @/news/20190908a The cache directory has moved
- @/news/20190906a Firefox updated to 69.0
- @/news/20190902a KISS 1.0 released
- @/news/20190831b python-setuptools now a part of python
- @/news/20190831a Removal of ca-certificates
- @/news/20190830b Removal of file
- @/news/20190830a Removal of fakeroot
- @/news/20190828a Removal of atk-bridge-fake
- @/news/20190824b Rust update requires manual intervention
- @/news/20190824a Manual repository fix needed
- @/news/20190823a KISS repository split
- @/news/20190822a KISS is now on https://repology.org
- @/news/20190811a KISS installed on hardware
- @/news/20190804a Firefox has been built
- @/news/20190719a Building a web browser