@@ -1,0 +1,60 @@
+<!doctype html><html lang=en><link href='data:image/gif;base64,R0lGODlhEAAQAPH/AAAAAP8AAP8AN////yH5BAUAAAQALAAAAAAQABAAAAM2SLrc/jA+QBUFM2iqA2bAMHSktwCCWJIYEIyvKLOuJt+wV69ry5cfwu7WCVp2RSPoUpE4n4sEADs=' rel=icon><title>KISS - 20210507a</title><meta charset=utf-8><meta name=Description content="An independent Linux distribution with a focus on simplicity and the concept of less is more."><meta name=viewport content="width=device-width,initial-scale=1"><style>body{overflow-y:scroll;font:16px monospace,monospace}img,.c{display:table-cell;max-width:999px;max-width:80ch}pre{margin:0;overflow-x:hidden}@media(max-width:999px){.c{display:block;font-size:1.94vw}}@media(prefers-color-scheme:dark){body{background:#000;color:#fff}a{color:#6CF}}</style><div style="display:table;margin:16px auto"><div class=c><pre style="top:0;position:sticky;user-select:none;padding-right:64px">
+<a href=/ style="text-decoration:none;color:#a00">
+|/
+|\ISS
+</a>
+<a href=/news>News</a>
+<a href=/blog>Blog</a>
+
+<a href=/wiki>Wiki</a>
+
+<a href=/install>Install KISS</a>
+<a href=/faq>FAQ</a>
+
+<a href=/package-system>Package System</a>
+<a href=/package-manager>Package Manager</a>
+<a href=/software>Software</a>
+
+<a href=/guidestones>Guidestones</a>
+
+<a href=/testimonials>Testimonials</a>
+<a href=/screenshots>Screenshots</a>
+<a href=/team>Team</a>
+
+<a href=/contact>Contact</a>
+<a href=/donate>Donate</a>
+
+<a href=https://github.com/kiss-community/>GitHub</a>
+<a href=https://git.k1sslinux.org/>Git (mirror)</a>
+<a href=https://archive.k1sslinux.org/>ML (archive)</a>
+
+</pre></div><div class=c><pre>
+
+
+Subject Kernel 5.12.0 build issue
+From    Dilyn Corner <dilyn.corner@k1sslinux.org>
+Date    Fri, 7 May 2021 22:23:00 -0500
+
+The launch of the 5.12.0 kernel resulted in a potential problem!  It's unclear
+how many people this impacts; there have only been a few reports in IRC,
+including me. There is a missing #include statement in one file.
+
+A simple:
+    sed -i '/<stdlib.h>/a #include <linux/stddef.h>' \
+        tools/objtool/arch/x86/decode.c
+
+Should resolve the issue! 
+
+This persists through at least 5.12.2, and there are no obvious changes in
+Linus' tree to indicate it's been reported or fixed.
+
+
+________________________________________________________________________________
+
+Dylan Araps    (C) 2019-2020
+kiss-community (C) 2020-2021
+Dilyn Corner   (C) 2021
+
+Linux(R) is the registered trademark of Linus Torvalds in the U.S. and
+other countries.
+</pre></div></div>
