@@ -1,0 +1,16 @@
+Subject Kernel 5.12.0 build issue
+From    Dilyn Corner <dilyn.corner@k1sslinux.org>
+Date    Fri, 7 May 2021 22:23:00 -0500
+
+The launch of the 5.12.0 kernel resulted in a potential problem!  It's unclear
+how many people this impacts; there have only been a few reports in IRC,
+including me. There is a missing #include statement in one file.
+
+A simple:
+    sed -i '/<stdlib.h>/a #include <linux/stddef.h>' \
+        tools/objtool/arch/x86/decode.c
+
+Should resolve the issue! 
+
+This persists through at least 5.12.2, and there are no obvious changes in
+Linus' tree to indicate it's been reported or fixed.
